--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
+    "react-spring": "^9.7.3",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
