--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.496.0",
+    "@aws-sdk/s3-request-presigner": "^3.496.0",
     "@react-google-maps/api": "^2.18.1",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
@@ -17,6 +19,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "mongodb": "^5.6.0",
+    "nanoid": "^5.0.4",
     "next": "^13.4.9-canary.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
