--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^14.1.0",
     "mongodb": "^5.6.0",
     "nanoid": "^5.0.4",
-    "next": "^13.4.9-canary.2",
+    "next": "^14.1.0",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.7.3",
