--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
+  },
+  "devDependencies": {
+    "supabase": "^1.136.3"
   }
 }
