--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.7.3",
     "swr": "^2.2.0",
@@ -34,6 +35,7 @@
     "typescript": "5.1.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "supabase": "^1.136.3"
   }
 }
