--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.4",
     "reverse-geocode": "^1.3.3",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
