--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/s3-request-presigner": "^3.496.0",
     "@react-google-maps/api": "^2.18.1",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
