--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "country-state-city": "^3.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "^14.1.0",
     "mongodb": "^5.6.0",
